--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <h3 class="upper-case dark-color font-600">Recomendaciones</h3>
                   <h1 class="upper-case font-800 green-color">PREVENIR</h1>
                   <p class="dark-color">Cambiar frecuentemente el agua de los bebederos de animales y de los floreros. Tapar los recipientes con agua, eliminar la basura acumulada en patios y áreas al aire libre, eliminar llantas o almacenamiento en sitios cerrados.</p>
-                  <p class="text-left mt-30"><a class="btn btn-green btn-circle btn-md" href="informacion.html">Sobre el Virus</a> </p>
+                  <p class="text-left mt-30"><a class="btn btn-green btn-circle btn-md" href="prevencion.html">Sobre el Virus</a> </p>
                 </div>
               </div>
             </div>
