--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@
   	<div class="gradient-overlay"></div>
   	<div class="container">
   		<div class="row">
+        <div class="col-md-6 heading-style-one box-title">
+  				<h6 class="text-uppercase">Video Informativo</h6>
+  				<h2><span class="font-700">Video Campaña de Dengue en Honduras</span></h2>
+  			</div>
   			<div class="col-md-2 col-md-offset-5">
   				<div class="center-layout">
                 <div class="v-align-middle"> <a class="popup-youtube" href="https://www.youtube.com/watch?v=5d0ngPB6l_U">
